Description: I ran 'make screenshot' on my master build to generate dialog pngs. Whilst the images were produced and the make command seemed to run successfully, all of the images contain text that is the mirror image of what it should be, i.e. they can only be read correctly by putting a mirror against them. Samples enclosed Steps to Reproduce: 1.Run make screenshot from your build environment on OSX 10.12.1 2.wait till make has finished 3. open a few generated PNGs to check Actual Results: The text in the screenshots is upside down and back to front Expected Results: The PNG screenshots should have text in them that is the right way around for normal reading Reproducible: Always User Profile Reset: No Additional Info: User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:50.0) Gecko/20100101 Firefox/50.0
Created attachment 129656 [details] Sample screenshot
Thorsten Behrens committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=8145a80868aeb2d81abdeb2918942911c6d128f4 tdf#104693: screenshot: fix mirrored mac screenshots It will be available in 5.4.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hello Thorsten, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?